api/zeroinbox-api.deployment.yaml
apiVersion: "apps/v1"
kind: "Deployment"
metadata:
  name: "zeroinbox-api"
  namespace: "default"
  labels:
    app: "zeroinbox-api"
    version: "1.9.2"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: "zeroinbox-api"
  template:
    metadata:
      labels:
        app: "zeroinbox-api"
    spec:
      containers:
      - name: "zeroinbox-api-gateway"
        image: "gcr.io/zeroinbox-portfolio-project/zeroinbox-api-gateway@sha256:0510f434752dc43ebfb187a9a6347c35f1b0da6992306996e81398ee1232b703"
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            memory: "500Mi"
            cpu: "300m"
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8080
            httpHeaders:
            - name: health-check
              value: "true"
          initialDelaySeconds: 10
          periodSeconds: 5
        ports:
        - containerPort: 8080
