api/zeroinbox-api.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: "zeroinbox-api"
  labels:
    app: "zeroinbox-api"
spec:
  type: NodePort
  ports:
  - protocol: "TCP"
    port: 8080
    targetPort: 8080
  selector:
    app: "zeroinbox-api"
